--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
 			</div>
 		</section>
 
-		<section class="section forth">
-			<div class="section--forth--container">
-				
-			</div>
+		<section class="logo-section">
+			<img src="./assets/images/Ring-logo.png"></img>
+			<h1>Shaping Dreams in Diamonds</h1>
 		</section>
 	</div>
 
