--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
 <body>
 
-	<!-- <div class="loader">
+	<div class="loader">
 		<p>Loading... Please wait</p>
 		<div class="progress"></div>
-	</div> -->
+	</div>
 	<nav class="nav--bar">
 		<img class="logo" src="assets/images/Alogo.png" alt="logo">
 	</nav>
