--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 		</section>
 
 		<section class="section second">
+			<!-- <div class="styling">
+				Crystal Clear Daimonds
+			</div> -->
 			<div class="section--two--container">
 				<h1>Where Every Ring Tells a Story</h1>
 				<p>Discover the magic of storytelling with our diamond rings, where each piece holds a unique narrative of love, beauty, and elegance. Let your style speak volumes with our exquisite collection</p>
@@ -70,16 +73,16 @@
 				<p>Redefine luxury with our exquisite diamond rings, where beauty is unveiled in every shimmering facet. Indulge in the finest craftsmanship and elegance that transcends time, making every moment unforgettable.</p>
 			</div>
 		</section>
-
-		<section class="logo-section">
-			<img src="./assets/images/Ring-logo.png"></img>
-			<h1>Shaping Dreams in Diamonds</h1>
-		</section>
 	</div>
 
 	<div id="webgi-canvas-container">
 		<canvas id="webgi-canvas"></canvas>
 	</div>
+
+	<section class="logo-section">
+		<img src="./assets/images/Ring-logo.png"></img>
+		<h1>Shaping Dreams in Diamonds</h1>
+	</section>
 
 	<script src="src/index_diamond.ts"></script>
 	
