--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 
 	<div class="loader">
-		<img class="logo" src="assets/images/sec 3 1.png" alt="loader">
+		<img class="loader_img" src="assets/images/sec 3 1.png" , alt="loader_img" width="50%" height="auto"/>
 		<p>Loading... Please wait</p>
 		<div class="progress"></div>
 	</div>
@@ -54,32 +54,32 @@
 		<section class="section first">
 			<div class="section--one--container">
 				<h1>Captivating Hearts, Sparkling Souls</h1>
-					<p>
-  
-						<span>Our</span>
-						<span> rings</span>
-						<span>are more than</span>
-						<span>just jewellery;</span>
-						<span>they're a reflection </span>
-						<span>of the heart and soul.</span>
-						<span>can</span>
-						<span>accomplish,</span>
-						<span>Captivate hearts </span>
-						<span>and ignite </span>
-						<span>spirits with</span>
-						<span>our enchanting</span>
-						<span>collection</span>
-						<span>designed to</span>
-						<span>inspire and</span>
-						<span>mesmerize.</span>
+				<p>
+					<span>Our</span>
+					<span> rings</span>
+					<span>are more than</span>
+					<span>just jewellery;</span>
+					<span>they're a reflection </span>
+					<span>of the heart and soul.</span>
+					<span>can</span>
+					<span>accomplish,</span>
+					<span>Captivate hearts </span>
+					<span>and ignite </span>
+					<span>spirits with</span>
+					<span>our enchanting</span>
+					<span>collection</span>
+					<span>designed to</span>
+					<span>inspire and</span>
+					<span>mesmerize.</span>
 					   
-					</p>
+				</p>
 			</div>
 		</section>
 
 		<section class="section second">
 			<div class="section--two--container">
-				<h1>Where Every Ring Tells a Story</h1>
+				<h2>Where Every Ring </h2>
+				<br><h2>Tells a Story</h2>
 				<p>
 					<span>Discover</span> 
 					<span>the magic</span> 
