Update index.html and index_diamond.ts

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 		<p>Loading... Please wait</p>
 		<div class="progress"></div>
 	</div>
+
+	<div class="container"></div>
 	<nav class="nav--bar">
 		<img class="logo" src="assets/images/Alogo.png" alt="logo">
 	</nav>
-
-	<div class="container">
 		<section class="section first">
 			<div class="section--one--container">
 				<h1>Captivating Hearts, Sparkling Souls</h1>
@@ -83,6 +83,22 @@
 		<img src="./assets/images/Ring-logo.png"></img>
 		<h1>Shaping Dreams in Diamonds</h1>
 	</section>
+
+	<footer class="footer">
+		<div class="left">
+			<p>Designed and Developed by</p>
+			<img src="./assets/images/desktoplogo.png" alt="Footer Logo">
+		</div>
+		<div class="right">
+			<p>Contact Number : +91 7057141513</p>
+			<p>Location:- Kothrud Pune 411038</p>
+			<p>Email ID:- sales@rebootcas.com</p>
+		</div>
+		<div class="social">
+			<p>Socials</p>
+			<a href="https://in.linkedin.com/company/reboot-consultancy-services"><img src="./assets/images/Vector.png" alt="linkin"></a>
+		</div>
+    </footer>
 
 	<script src="src/index_diamond.ts"></script>
 	
