--- a/index.html
+++ b/index.html
@@ -2,35 +2,12 @@
 <html lang="en">
 
 <head>
-	<title>Threejs Free Course Final Project - BY ANDERSON MANCINI</title>
-	<meta name="description" content="Threejs demo landing page for product visualization using WEBGi">
-
-	<meta property="og:url" content="http://drill-webgi-tutorial.vercel.app">
+	<title>Aabhushan</title>
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Threejs demo landing page for product visualization using WEBGi">
-	<meta property="og:description" content="Threejs demo landing page for product visualization using WEBGi">
-	<meta property="og:image" content="http://drill-webgi-tutorial.vercel.app/assets/images/preview.jpg">
-
-	<meta name="twitter:card" content="summary_large_image">
-	<meta property="twitter:domain" content="drill-webgi-tutorial.vercel.app">
-	<meta property="twitter:url" content="http://drill-webgi-tutorial.vercel.app">
-	<meta name="twitter:title" content="Threejs demo landing page for product visualization using WEBGi">
-	<meta name="twitter:description"
-		content="Threejs demo landing page for product visualization using WEBGi">
-	<meta name="twitter:image" content="http://drill-webgi-tutorial.vercel.app/assets/images/preview.jpg">
 
 	<meta name="keywords" content="HTML, CSS, JavaScript">
-	<meta name="author" content="www.neotix.com.br">
 
 	<meta charset="UTF-8" />
-
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-	<link rel="manifest" href="assets/favicons/site.webmanifest">
-	<meta name="msapplication-TileColor" content="#F2CE6E">
-	<meta name="theme-color" content="#F2CE6E">
-
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,11 +18,11 @@
 
 <body>
 
-	<div class="loader">
+	<!-- <div class="loader">
 		<img class="loader_img" src="assets/images/sec 3 1.png" , alt="loader_img" width="50%" height="auto"/>
 		<p>Loading... Please wait</p>
 		<div class="progress"></div>
-	</div>
+	</div> -->
 
 	<div class="container"></div>
 	<nav class="nav--bar">
