--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="progress"></div>
 	</div> -->
 
-	<div class="container"></div>
+	<div class="container">
 	<nav class="nav--bar">
 		<img class="logo" src="assets/images/Alogo.png" alt="logo">
 	</nav>
@@ -32,14 +32,12 @@
 			<div class="section--one--container">
 				<h1>Captivating Hearts, Sparkling Souls</h1>
 				<p>
-					<span>Our</span>
+					<span>Our diamond</span>
 					<span> rings</span>
 					<span>are more than</span>
 					<span>just jewellery;</span>
 					<span>they're a reflection </span>
 					<span>of the heart and soul.</span>
-					<span>can</span>
-					<span>accomplish,</span>
 					<span>Captivate hearts </span>
 					<span>and ignite </span>
 					<span>spirits with</span>
@@ -48,7 +46,6 @@
 					<span>designed to</span>
 					<span>inspire and</span>
 					<span>mesmerize.</span>
-					   
 				</p>
 			</div>
 		</section>
@@ -58,8 +55,8 @@
 				Crystal Clear Daimonds
 			</div> -->
 			<div class="section--two--container">
-				<h2>Where Every Ring </h2>
-				<br><h2>Tells a Story</h2>
+				<h1>Where Every Ring </h1>
+				<br><h1>Tells a Story</h1>
 				<p>
 					<span>Discover</span> 
 					<span>the magic</span> 
@@ -106,6 +103,7 @@
 			</div>
 		</section>
 	</div>
+</div>
 
 	<div id="webgi-canvas-container">
 		<canvas id="webgi-canvas"></canvas>
