--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 		</section>
 
 		<section class="section second">
-			<!-- <div class="styling">
+			<div class="styling">
 				Crystal Clear Daimonds
-			</div> -->
+			</div>
 			<div class="section--two--container">
 				<h1>Where Every Ring </h1>
 				<br><h1>Tells a Story</h1>
