--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 <body>
 
-	<!-- <div class="loader">
+	<div class="loader">
 		<img class="loader_img" src="assets/images/sec 3 1.png" , alt="loader_img" width="50%" height="auto"/>
 		<p>Loading... Please wait</p>
 		<div class="progress"></div>
-	</div> -->
+	</div>
 
 	<div class="container">
 	<nav class="nav--bar">
@@ -51,9 +51,9 @@
 		</section>
 
 		<section class="section second">
-			<div class="styling">
+			<!-- <div class="styling">
 				Crystal Clear Daimonds
-			</div>
+			</div> -->
 			<div class="section--two--container">
 				<h1>Where Every Ring </h1>
 				<br><h1>Tells a Story</h1>
