--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	</div>
 
 	<div class="container">
-	<nav class="nav--bar">
-		<img class="logo" src="assets/images/Alogo.png" alt="logo">
-	</nav>
+		<nav class="nav--bar">
+			<img class="logo" src="assets/images/Alogo.png" alt="logo">
+		</nav>
 		<section class="section first">
 			<div class="section--one--container">
 				<h1>Captivating Hearts, Sparkling Souls</h1>
@@ -103,17 +103,16 @@
 			</div>
 		</section>
 	</div>
-</div>
 
 	<div id="webgi-canvas-container">
 		<canvas id="webgi-canvas"></canvas>
 	</div>
 
-	<section class="logo-section">
-		<img src="./assets/images/Ring-logo.png"></img>
+	<footer class="logo-section">
+		<img src="./assets/images/Ring-logo.png" alt="LOGO">
 		<h1>Shaping Dreams in Diamonds</h1>
-	</section>
-
+	</footer>
+	
 	<footer class="footer">
 		<div class="left">
 			<p>Designed and Developed by</p>
