--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+	<script  defer src="script.js"></script>
 
 </head>
 
 <body>
-
 	<div class="loader">
 		<img class="loader_img" src="assets/images/sec 3 1.png" , alt="loader_img" width="50%" height="auto"/>
 		<p>Loading... Please wait</p>
@@ -32,49 +32,19 @@
 			<div class="section--one--container">
 				<h1>Captivating Hearts, Sparkling Souls</h1>
 				<p>
-					<span>Our diamond</span>
-					<span> rings</span>
-					<span>are more than</span>
-					<span>just jewellery;</span>
-					<span>they're a reflection </span>
-					<span>of the heart and soul.</span>
-					<span>Captivate hearts </span>
-					<span>and ignite </span>
-					<span>spirits with</span>
-					<span>our enchanting</span>
-					<span>collection</span>
-					<span>designed to</span>
-					<span>inspire and</span>
-					<span>mesmerize.</span>
+					Our diamond rings are more than just jewellery; they're a reflection of the heart and soul. Captivate hearts and ignite spirits with our enchanting collection designed to inspire and mesmerize.
 				</p>
 			</div>
 		</section>
 
 		<section class="section second">
-			<!-- <div class="styling">
+			 <div class="styling">
 				Crystal Clear Daimonds
-			</div> -->
+			</div> 
 			<div class="section--two--container">
-				<h1>Where Every Ring </h1>
-				<br><h1>Tells a Story</h1>
+				<h1>Where Every Ring Tells a Story</h1>
 				<p>
-					<span>Discover</span> 
-					<span>the magic</span> 
-					<span>of storytelling</span> 
-					<span>with our</span> 
-					<span>diamond rings,</span> 
-					<span>where each piece </span> 
-					<span>holds</span>
-					<span>a unique</span> 
-					<span>narrative</span> 
-					<span>of love,</span>  
-					<span>beauty,</span> 
-					<span>and elegance.</span> 
-					<span>Let your</span>  
-					<span>style speak </span> 
-					<span>volumes </span> 
-					<span>with our</span> 
-					<span>exquisite collection.</span>
+					Discover the magic of storytelling with our diamond rings, where each piece holds a unique narrative of love, beauty, and elegance. Let your style speak volumes with our exquisite collection.
 				</p>
 			</div>
 		</section>
@@ -83,22 +53,7 @@
 			<div class="section--third--container">
 				<h1>Luxury Redefined, Beauty Unveiled</h1>
 				<p>
-					<span>Redefine luxury</span>
-					<span>with our</span>
-					<span>exquisite</span>
-					<span>diamond rings,</span>
-					<span>where beauty</span>
-					<span>is unveiled</span>
-					<span>in every </span>
-					<span>shimmering facet. </span>
-					<span>Indulge </span>
-					<span>in the </span>
-					<span>finest craftsmanship</span>
-					<span>and</span>
-					<span>elegance that</span>
-					<span>making</span> 
-					<span>every moment </span>
-					<span>unforgettable</span>
+			        Redefine luxury with our exquisite diamond rings, where beauty is unveiled in every shimmering facet. Indulge in the finest craftsmanship and elegance that making every moment unforgettable
 				</p>
 			</div>
 		</section>
@@ -110,7 +65,7 @@
 	</div>
 
 	<section class="logo-section">
-		<img src="./assets/images/Ring-logo.png"></img>
+		<img src="./assets/images/Ring-logo.png">
 		<h1>Shaping Dreams in Diamonds</h1>
 	</section>
 
@@ -130,8 +85,10 @@
 		</div>
     </footer>
 
+	
 	<script src="src/index_diamond.ts"></script>
 	
-</body>
+	
 
+</body>
 </html>
