--- a/index.html
+++ b/index.html
@@ -42,9 +42,24 @@
 				Crystal Clear Daimonds
 			</div> 
 			<div class="section--two--container">
-				<h1>Where Every Ring Tells a Story</h1>
+				<h2>Where Every Ring <br>Tells a Story</h2>
 				<p>
-					Discover the magic of storytelling with our diamond rings, where each piece holds a unique narrative of love, beauty, and elegance. Let your style speak volumes with our exquisite collection.
+					<span>Redefine luxury</span>
+					<span>with our</span>
+					<span>exquisite</span>
+					<span>diamond rings,</span>
+					<span>where beauty</span>
+					<span>is unveiled</span>
+					<span>in every </span>
+					<span>shimmering facet. </span>
+					<span>Indulge </span>
+					<span>in the </span>
+					<span>finest craftsmanship</span>
+					<span>and</span>
+					<span>elegance that</span>
+					<span>making</span> 
+					<span>every moment </span>
+					<span>unforgettable</span>
 				</p>
 			</div>
 		</section>
@@ -53,8 +68,24 @@
 			<div class="section--third--container">
 				<h1>Luxury Redefined, Beauty Unveiled</h1>
 				<p>
-			        Redefine luxury with our exquisite diamond rings, where beauty is unveiled in every shimmering facet. Indulge in the finest craftsmanship and elegance that making every moment unforgettable
+					<span>Redefine luxury</span>
+					<span>with our</span>
+					<span>exquisite</span>
+					<span>diamond rings,</span>
+					<span>where beauty</span>
+					<span>is unveiled</span>
+					<span>in every </span>
+					<span>shimmering facet. </span>
+					<span>Indulge </span>
+					<span>in the </span>
+					<span>finest craftsmanship</span>
+					<span>and</span>
+					<span>elegance that</span>
+					<span>making</span> 
+					<span>every moment </span>
+					<span>unforgettable</span>
 				</p>
+
 			</div>
 		</section>
 	</div>
