--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
 			<div class="section--one--container">
 				<h1>Captivating Hearts, Sparkling Souls</h1>
 				<p>
-					Our diamond rings are more than just jewellery; they're a reflection of the heart and soul. Captivate hearts and ignite spirits with our enchanting collection designed to inspire and mesmerize.
+					<span>Our</span>
+					<span> rings</span>
+					<span>are more than</span>
+					<span>just jewellery</span>
+					<span>they're a reflection </span>
+					<span>of the heart </span>
+					<span>can and soul.</span>
+					<span>accomplish,</span>
+					<span>Captivate hearts </span>
+					<span>and ignite </span>
+					<span>spirits with</span>
+					<span>our enchanting</span>
+					<span>collection</span>
+					<span>designed</span>
+					<span> to inspire and</span>
+					<span>mesmerize.</span>
 				</p>
 			</div>
 		</section>
