--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<div class="loader">
-		<img class="loader_img" src="assets/images/sec 3 1.png" , alt="loader_img" width="50%" height="auto"/>
+		<img class="loader_img" src="assets/images/preload icon.png" , alt="loader_img" width="50%" height="auto"/>
 		<p>Loading... Please wait</p>
 		<div class="progress"></div>
 	</div>
